// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisableTfaModal tests should render correctly 1`] = `
<Modal
  onClose={[MockFunction]}
  open={true}
>
  <Panel
    accent={true}
    title="Disable Two-Factor Authentication"
  >
    <form
      onSubmit={[Function]}
    >
      <Panel.Section>
        <p>
          Enter your SparkPost password to disable two-factor authentication.
        </p>
        <Grid>
          <Grid.Column
            md={6}
            xs={12}
          >
            <TextField
              error=""
              onChange={[Function]}
              placeholder="Enter your password"
              resize="both"
              type="password"
              value=""
            />
          </Grid.Column>
        </Grid>
      </Panel.Section>
      <Panel.Section>
        <Button
          disabled={false}
          onClick={[Function]}
          primary={true}
          size="default"
          type="submit"
        >
          Disable 2FA
        </Button>
        <Button
          className="Cancel"
          disabled={false}
          onClick={[MockFunction]}
          size="default"
        >
          Cancel
        </Button>
      </Panel.Section>
    </form>
  </Panel>
</Modal>
`;

exports[`DisableTfaModal tests should show disabling as button text when togglePending 1`] = `
<Modal
  onClose={[MockFunction]}
  open={true}
>
  <Panel
    accent={true}
    title="Disable Two-Factor Authentication"
  >
    <form
      onSubmit={[Function]}
    >
      <Panel.Section>
        <p>
          Enter your SparkPost password to disable two-factor authentication.
        </p>
        <Grid>
          <Grid.Column
            md={6}
            xs={12}
          >
            <TextField
              error=""
              onChange={[MockFunction]}
              placeholder="Enter your password"
              resize="both"
              type="password"
              value=""
            />
          </Grid.Column>
        </Grid>
      </Panel.Section>
      <Panel.Section>
        <Button
          disabled={true}
          onClick={[Function]}
          primary={true}
          size="default"
          type="submit"
        >
          Disabling...
        </Button>
        <Button
          className="Cancel"
          disabled={true}
          onClick={[MockFunction]}
          size="default"
        >
          Cancel
        </Button>
      </Panel.Section>
    </form>
  </Panel>
</Modal>
`;

exports[`DisableTfaModal tests should show error on TextField when toggleError and showErrors 1`] = `
<Modal
  onClose={[MockFunction]}
  open={true}
>
  <Panel
    accent={true}
    title="Disable Two-Factor Authentication"
  >
    <form
      onSubmit={[Function]}
    >
      <Panel.Section>
        <p>
          Enter your SparkPost password to disable two-factor authentication.
        </p>
        <Grid>
          <Grid.Column
            md={6}
            xs={12}
          >
            <TextField
              error="Incorrect password"
              onChange={[MockFunction]}
              placeholder="Enter your password"
              resize="both"
              type="password"
              value=""
            />
          </Grid.Column>
        </Grid>
      </Panel.Section>
      <Panel.Section>
        <Button
          disabled={false}
          onClick={[Function]}
          primary={true}
          size="default"
          type="submit"
        >
          Disable 2FA
        </Button>
        <Button
          className="Cancel"
          disabled={false}
          onClick={[MockFunction]}
          size="default"
        >
          Cancel
        </Button>
      </Panel.Section>
    </form>
  </Panel>
</Modal>
`;
